# Manga_bot

./: .gitignore  pyproject.toml  settings.py
utils/: abstract.py  primary.py
