[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["c0nfid <beiov2004.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
autodotenv = "^0.1.3"
requests = "^2.31.0"
pillow = "^10.1.0"
google-api-python-client = "^2.107.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
